<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    tools:context=".DetailActivityMovie">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constran1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detail_sampul"
            android:contentDescription="@string/this_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:tint="#6F000000"
            android:src="@color/abuy"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_over"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_sampul">


            <ImageView
                android:id="@+id/detail_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/this_image" />

            <TextView
                android:id="@+id/detail_rate"
                android:drawableStart="@drawable/ic_star_black_24dp"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginTop="130dp"
                android:fontFamily="@font/ubuntu"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:backgroundTint="#6F000000"
                android:layout_marginStart="52dp"
                android:text="@string/rate" />

        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/detail_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gotham"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="120dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_sampul" />

        <TextView
            android:id="@+id/detail_popular"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:textColor="@color/color2"
            android:drawableStart="@drawable/ic_people_black_24dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/populer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_judul"
            app:layout_constraintVertical_bias="0.14" />

        <TextView
            android:id="@+id/detail_month"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/great"
            android:gravity="center|end"
            android:text="@string/month_film1"
            android:textColor="@color/abu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_judul"
            app:layout_constraintVertical_bias="0.14" />

        <TextView
            android:id="@+id/detail_over"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/grad"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/ubuntu"
            android:textSize="20sp"
            android:text="@string/overview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_judul"/>

        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/gotham"
            android:gravity="center"
            android:text="@string/movie"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_over" />



    </android.support.constraint.ConstraintLayout>



</ScrollView>

    <ProgressBar
        android:id="@+id/progressDetailMovie"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/kuning"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constran1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constran1"/>

</android.support.constraint.ConstraintLayout>